--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator App</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./index.js"></script>
 </head>
 <body>
@@ -16,18 +17,20 @@
                 <h1>Calculator</h1>
             </div>
             <div id="calculator-screen">
-                <p id="current-input">1 + </p>
-                <p id="result">0</p>
+                <p id="prev-inputs">&nbsp;</p>
+                <p id="current-input">&nbsp;</p>
             </div>
             <div id="calculator-inputs">
                 <div class="column">
                     <div class="operation">Clr</div>
+                    <div class="operation">%</div>
                     <div class="number">7</div>
                     <div class="number">4</div>
                     <div class="number">1</div>
                     <div class="operation">&plus;/&minus;</div>
                 </div>
                 <div class="column">
+                    <div class="operation">(</div>
                     <div class="operation">x<sup>y</sup></div>
                     <div class="number">8</div>
                     <div class="number">5</div>
@@ -35,11 +38,12 @@
                     <div class="number">0</div>
                 </div>
                 <div class="column">
+                    <div class="operation">)</div>
                     <div class="operation">&Sqrt;</div>
                     <div class="number">9</div>
                     <div class="number">6</div>
                     <div class="number">3</div>
-                    <div class="number decimal-point">.</div>
+                    <div class="operation decimal-point">.</div>
                 </div>
                 <div class="column">
                     <div class="operation">Del</div>
@@ -47,6 +51,7 @@
                     <div class="operation">&times;</div>
                     <div class="operation">&minus;</div>
                     <div class="operation">&plus;</div>
+                    <div class="operation">&equals;</div>
                 </div>
             </div>
         </div>
