Fixed styling issue with inputs

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <h1>Calculator</h1>
             </div>
             <div id="calculator-screen">
-                <p id="prev-inputs">&nbsp;</p>
-                <p id="current-input">&nbsp;</p>
+                <p id="prev-inputs"></p>
+                <p id="current-input"></p>
             </div>
             <div id="calculator-inputs">
                 <div class="column">
