--- a/index.html
+++ b/index.html
@@ -22,36 +22,36 @@
             </div>
             <div id="calculator-inputs">
                 <div class="column">
-                    <div class="operation">Clr</div>
-                    <div class="operation">%</div>
-                    <div class="number">7</div>
-                    <div class="number">4</div>
-                    <div class="number">1</div>
-                    <div class="operation">&plus;/&minus;</div>
+                    <div id="Clr" class="keypad operation">Clr</div>
+                    <div id="%" class="keypad operation">%</div>
+                    <div class="keypad number">7</div>
+                    <div class="keypad number">4</div>
+                    <div class="keypad number">1</div>
+                    <div id="p/n" class="keypad operation">&plus;/&minus;</div>
                 </div>
                 <div class="column">
-                    <div class="operation">(</div>
-                    <div class="operation">x<sup>y</sup></div>
-                    <div class="number">8</div>
-                    <div class="number">5</div>
-                    <div class="number">2</div>
-                    <div class="number">0</div>
+                    <div id="(" class="keypad operation">(</div>
+                    <div id="exp" class="keypad operation">x<sup>y</sup></div>
+                    <div class="keypad number">8</div>
+                    <div class="keypad number">5</div>
+                    <div class="keypad number">2</div>
+                    <div class="keypad number">0</div>
                 </div>
                 <div class="column">
-                    <div class="operation">)</div>
-                    <div class="operation">&Sqrt;</div>
-                    <div class="number">9</div>
-                    <div class="number">6</div>
-                    <div class="number">3</div>
-                    <div class="operation decimal-point">.</div>
+                    <div id=")" class="keypad operation">)</div>
+                    <div id="sqrt" class="keypad operation">&Sqrt;</div>
+                    <div class="keypad number">9</div>
+                    <div class="keypad number">6</div>
+                    <div class="keypad number">3</div>
+                    <div id="test" class="keypad decimal-point">.</div>
                 </div>
                 <div class="column">
-                    <div class="operation">Del</div>
-                    <div class="operation">&divide;</div>
-                    <div class="operation">&times;</div>
-                    <div class="operation">&minus;</div>
-                    <div class="operation">&plus;</div>
-                    <div class="operation">&equals;</div>
+                    <div id="Del" class="keypad operation">Del</div>
+                    <div id="/" class="keypad operation">&divide;</div>
+                    <div id="*" class="keypad operation">&times;</div>
+                    <div id="-" class="keypad operation">&minus;</div>
+                    <div id="+" class="keypad operation">&plus;</div>
+                    <div id="=" class="keypad operation">&equals;</div>
                 </div>
             </div>
         </div>
