Fixed calculation bug that resulted in NaN

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <h1>Calculator</h1>
             </div>
             <div id="calculator-screen">
-                <p id="prev-inputs"></p>
-                <p id="current-input"></p>
+                <div id="prev-inputs"></div>
+                <div id="current-input"></div>
             </div>
             <div id="calculator-inputs">
                 <div class="column">
@@ -31,7 +31,7 @@
                 </div>
                 <div class="column">
                     <div id="(" class="keypad operation">(</div>
-                    <div id="exp" class="keypad operation">x<sup>y</sup></div>
+                    <div id="**" class="keypad operation">x<sup>y</sup></div>
                     <div class="keypad number">8</div>
                     <div class="keypad number">5</div>
                     <div class="keypad number">2</div>
@@ -54,6 +54,10 @@
                     <div id="=" class="keypad operation">&equals;</div>
                 </div>
             </div>
+        </div>
+
+        <div id="log">
+            <h2>History</h2>
         </div>
         
     </main>
