Formatting fixes. Negative toggle button functionality implemented

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="keypad number">9</div>
                     <div class="keypad number">6</div>
                     <div class="keypad number">3</div>
-                    <div id="test" class="keypad decimal-point">.</div>
+                    <div class="keypad decimal-point">.</div>
                 </div>
                 <div class="column">
                     <div id="Del" class="keypad operation">Del</div>
