--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./index.js"></script>
 </head>
+
 <body>
     <main>
 
@@ -58,8 +60,11 @@
 
         <div id="log">
             <h2>History</h2>
+            <div id="equation-log"></div>
+            <button id="clear-log">Clear History</button>
         </div>
-        
+
     </main>
 </body>
+
 </html>
